--- a/ikm/Views/Apps/Index.cshtml
+++ b/ikm/Views/Apps/Index.cshtml
@@ -4,17 +4,20 @@
     ViewData["Title"] = "Список приложений";
 }
 
-<h1>Приложения</h1>
+<h1>Справочник приложений</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Добавить новое</a>
+    <a asp-action="Create" class="btn btn-primary">
+        <i class="fa-solid fa-plus"></i> Добавить приложение
+    </a>
 </p>
-<table class="table table-striped">
+
+<table class="table table-bordered">
     <thead>
         <tr>
-            <th>Процесс (ID)</th>
-            <th>Название</th>
-            <th>Действия</th>
+            <th>Имя процесса (exe)</th>
+            <th>Название приложения</th>
+            <th style="width: 150px;">Действия</th>
         </tr>
     </thead>
     <tbody>
@@ -24,8 +27,12 @@
                 <td>@Html.DisplayFor(modelItem => item.ProcessName)</td>
                 <td>@Html.DisplayFor(modelItem => item.BaseName)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.ProcessName">Редактировать</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ProcessName" class="text-danger">Удалить</a>
+                    <a asp-action="Edit" asp-route-id="@item.ProcessName" class="btn btn-primary btn-sm" title="Редактировать">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.ProcessName" class="btn btn-danger btn-sm" title="Удалить">
+                        <i class="fa-solid fa-trash"></i>
+                    </a>
                 </td>
             </tr>
         }
