--- a/ikm/Views/AppSessions/Delete.cshtml
+++ b/ikm/Views/AppSessions/Delete.cshtml
@@ -1,11 +1,10 @@
-﻿@model ikm.Models.PageSession
+﻿@model ikm.Models.AppSession
 
 @{
     ViewData["Title"] = "Удаление";
 }
 
-<h1>Удаление</h1>
-<h3>Вы уверены, что хотите удалить эту сессию?</h3>
+<h1>Вы уверены, что хотите удалить эту сессию?</h1>
 <div>
     <hr />
     <dl class="row">
@@ -24,30 +23,23 @@
         </dd>
 
         <dt class="col-sm-3">
-            Страница
+            Приложение
         </dt>
         <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.PageTitle)
+            @Html.DisplayFor(model => model.App.BaseName)
         </dd>
 
         <dt class="col-sm-3">
-            Платформа
+            Заголовок окна
         </dt>
         <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.Domain)
-        </dd>
-
-        <dt class="col-sm-3">
-            Название браузера
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.BrowserName)
+            @Html.DisplayFor(model => model.WindowTitle)
         </dd>
     </dl>
-
+    
     <form asp-action="Delete">
         <input type="hidden" asp-for="SessionId" />
-        <input type="submit" value="Удалить" class="btn btn-danger" />
+        <input type="submit" value="Удалить" class="btn btn-danger" /> 
         <a asp-action="Index" class="btn btn-secondary">Отмена</a>
     </form>
 </div>
