--- a/ikm/Views/Apps/Index.cshtml
+++ b/ikm/Views/Apps/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ikm.Models.App>
 
 @{
-    ViewData["Title"] = "Список приложений";
+    ViewData["Title"] = "Справочник приложений";
 }
 
 <h1>Справочник приложений</h1>
