--- a/ikm/Views/Sites/Index.cshtml
+++ b/ikm/Views/Sites/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<ikm.Models.Site>
 
 @{
-    ViewData["Title"] = "Список сайтов";
+    ViewData["Title"] = "Справочник сайтов";
 }
 
 <h1>Справочник сайтов</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">
-        <i class="fa-solid fa-plus"></i> Добавить новый
+        <i class="fa-solid fa-plus"></i> Добавить сайт
     </a>
 </p>
 
