--- a/ikm/Views/AppSessions/Edit.cshtml
+++ b/ikm/Views/AppSessions/Edit.cshtml
@@ -1,15 +1,17 @@
-﻿@model ikm.Models.PageSession
+﻿@model ikm.Models.AppSession
 
 @{
-    ViewData["Title"] = "Создание";
+    ViewData["Title"] = "Редактирование";
 }
 
-<h1>Добавить сессию</h1>
+<h1>Редактирование сессии</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <input type="hidden" asp-for="SessionId" />
 
             <div class="form-group mb-3">
                 <label asp-for="ActivationDate" class="control-label"></label>
@@ -36,29 +38,19 @@
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for="PageTitle" class="control-label"></label>
-                <input asp-for="PageTitle" class="form-control" />
-                <span asp-validation-for="PageTitle" class="text-danger"></span>
+                <label asp-for="ProcessName" class="control-label"></label>
+                <select asp-for="ProcessName" class="form-control" asp-items="ViewBag.ProcessName"></select>
+                <span asp-validation-for="ProcessName" class="text-danger"></span>
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for="BrowserName" class="control-label">Браузер</label>
-                <select asp-for="BrowserName" class="form-control" asp-items="ViewBag.BrowserName">
-                    <option value="">Выберите браузер</option>
-                </select>
-                <span asp-validation-for="BrowserName" class="text-danger"></span>
-            </div>
-
-            <div class="form-group mb-3">
-                <label asp-for="Domain" class="control-label">Домен сайта</label>
-                <select asp-for="Domain" class="form-control" asp-items="ViewBag.Domain">
-                    <option value="">Выберите сайт</option>
-                </select>
-                <span asp-validation-for="Domain" class="text-danger"></span>
+                <label asp-for="WindowTitle" class="control-label"></label>
+                <input asp-for="WindowTitle" class="form-control" />
+                <span asp-validation-for="WindowTitle" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Создать" class="btn btn-success" />
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-secondary">Назад</a>
             </div>
         </form>
