--- a/ikm/Views/AppSessions/Index.cshtml
+++ b/ikm/Views/AppSessions/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model IEnumerable<ikm.Models.ViewSession>
+﻿@model IEnumerable<ikm.Models.AppSession>
 
 @{
-    ViewData["Title"] = "Просмотры видео";
+    ViewData["Title"] = "Сессии приложений";
 }
 
-<h1>Сессии просмотров видео</h1>
+<h1>Сессии приложений</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">
-        <i class="fa-solid fa-plus"></i> Добавить запись
+        <i class="fa-solid fa-plus"></i> Добавить сессию
     </a>
 </p>
 
@@ -19,9 +19,8 @@
             <th>Время начала</th>
             <th>Дата окончания</th>
             <th>Время окончания</th>
-            <th>Видео</th>
-            <th>Платформа</th>
-            <th>Время просмотра (сек)</th>
+            <th>Приложение</th>
+            <th>Заголовок окна</th>
             <th>Действия</th>
         </tr>
     </thead>
@@ -33,14 +32,13 @@
                 <td>@item.ActivationTime</td>
                 <td>@item.ShutdownDate</td>
                 <td>@item.ShutdownTime</td>
-                <td>@Html.DisplayFor(modelItem => item.Video.Title)</td>
-                <td>@Html.DisplayFor(modelItem => item.Domain)</td>
-                <td>@Html.DisplayFor(modelItem => item.ViewingTime)</td>
+                <td>@Html.DisplayFor(modelItem => item.ProcessName)</td>
+                <td>@Html.DisplayFor(modelItem => item.WindowTitle)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.ViewId" class="btn btn-primary btn-sm" title="Редактировать">
+                    <a asp-action="Edit" asp-route-id="@item.SessionId" class="btn btn-primary btn-sm" title="Редактировать">
                         <i class="fa-solid fa-pen-to-square"></i>
                     </a>
-                    <a asp-action="Delete" asp-route-id="@item.ViewId" class="btn btn-danger btn-sm" title="Удалить">
+                    <a asp-action="Delete" asp-route-id="@item.SessionId" class="btn btn-danger btn-sm" title="Удалить">
                         <i class="fa-solid fa-trash"></i>
                     </a>
                 </td>
