--- a/ikm/Views/Apps/Edit.cshtml
+++ b/ikm/Views/Apps/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Редактирование";
 }
 
-<h1>Редактирование</h1>
+<h1>Редактирование приложения</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
