--- a/ikm/Views/PageSessions/Edit.cshtml
+++ b/ikm/Views/PageSessions/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Редактирование";
 }
 
-<h1>Редактирование записи</h1>
+<h1>Редактирование сессии</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,7 +45,9 @@
 
             <div class="form-group mb-3">
                 <label asp-for="BrowserName" class="control-label">Видео</label>
-                <select asp-for="BrowserName" class="form-control" asp-items="ViewBag.BrowserName"></select>
+                <select asp-for="BrowserName" class="form-control" asp-items="ViewBag.BrowserName">
+                    <option value="">Выберите браузер</option>
+                </select>
                 <span asp-validation-for="BrowserName" class="text-danger"></span>
             </div>
 
