--- a/ikm/Views/PageSessions/Index.cshtml
+++ b/ikm/Views/PageSessions/Index.cshtml
@@ -37,10 +37,10 @@
                 <td>@Html.DisplayFor(modelItem => item.Domain)</td>
                 <td>@Html.DisplayFor(modelItem => item.BrowserName)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.SessionId" class="btn btn-primary btn-sm">
+                    <a asp-action="Edit" asp-route-id="@item.SessionId" class="btn btn-primary btn-sm" title="Редактировать">
                         <i class="fa-solid fa-pen-to-square"></i>
                     </a>
-                    <a asp-action="Delete" asp-route-id="@item.SessionId" class="btn btn-danger btn-sm">
+                    <a asp-action="Delete" asp-route-id="@item.SessionId" class="btn btn-danger btn-sm" title="Удалить">
                         <i class="fa-solid fa-trash"></i>
                     </a>
                 </td>
