--- a/ikm/Views/Sites/Create.cshtml
+++ b/ikm/Views/Sites/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Создание";
 }
 
-<h1>Добавить приложение</h1>
+<h1>Добавить сайт</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
