Унификация терминологии и улучшение UI таблиц
Заменено слово "сессия" на "запись"/"посещение" во всех представлениях для единообразия терминологии. Кнопки "Создать" теперь используют стиль btn-primary. Для действий "Редактировать" и "Удалить" добавлены кастомные стили кнопок и улучшено их расположение в таблицах. Обновлены стили для этих кнопок в site.css. В главном меню и заголовке сайта изменено название на "Tracker". Кнопки перехода к журналам теперь подписаны как "Перейти". Удалена неиспользуемая страница Privacy.cshtml. Улучшена визуальная согласованность интерфейса.

--- a/ikm/Views/AppSessions/Delete.cshtml
+++ b/ikm/Views/AppSessions/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Удаление";
 }
 
-<h1>Вы уверены, что хотите удалить эту сессию?</h1>
+<h1>Вы уверены, что хотите удалить это запись?</h1>
 <div>
     <hr />
     <dl class="row">
