--- a/ikm/Views/PageSessions/Index.cshtml
+++ b/ikm/Views/PageSessions/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<ikm.Models.PageSession>
 
 @{
-    ViewData["Title"] = "Сессии использования страниц";
+    ViewData["Title"] = "Посещения страниц";
 }
 
-<h1>Сессии использования страниц</h1>
+<h1>Посещения страниц</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">
@@ -37,12 +37,14 @@
                 <td>@Html.DisplayFor(modelItem => item.Domain)</td>
                 <td>@Html.DisplayFor(modelItem => item.BrowserName)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.SessionId" class="btn btn-primary btn-sm" title="Редактировать">
-                        <i class="fa-solid fa-pen-to-square"></i>
-                    </a>
-                    <a asp-action="Delete" asp-route-id="@item.SessionId" class="btn btn-danger btn-sm" title="Удалить">
-                        <i class="fa-solid fa-trash"></i>
-                    </a>
+                    <div class="d-flex gap-2">
+                        <a asp-action="Edit" asp-route-id="@item.SessionId" class="btn-table-edit" title="Редактировать">
+                            <i class="fa-solid fa-pen-to-square"></i>
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.SessionId" class="btn-table-delete" title="Удалить">
+                            <i class="fa-solid fa-trash"></i>
+                        </a>
+                    </div>
                 </td>
             </tr>
         }
