--- a/ikm/Views/AppSessions/Index.cshtml
+++ b/ikm/Views/AppSessions/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<ikm.Models.AppSession>
 
 @{
-    ViewData["Title"] = "Сессии приложений";
+    ViewData["Title"] = "Посещения приложений";
 }
 
-<h1>Сессии приложений</h1>
+<h1>Посещения приложений</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">
-        <i class="fa-solid fa-plus"></i> Добавить сессию
+        <i class="fa-solid fa-plus"></i> Добавить запись
     </a>
 </p>
 
@@ -35,12 +35,14 @@
                 <td>@Html.DisplayFor(modelItem => item.ProcessName)</td>
                 <td>@Html.DisplayFor(modelItem => item.WindowTitle)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.SessionId" class="btn btn-primary btn-sm" title="Редактировать">
-                        <i class="fa-solid fa-pen-to-square"></i>
-                    </a>
-                    <a asp-action="Delete" asp-route-id="@item.SessionId" class="btn btn-danger btn-sm" title="Удалить">
-                        <i class="fa-solid fa-trash"></i>
-                    </a>
+                    <div class="d-flex gap-2">
+                        <a asp-action="Edit" asp-route-id="@item.SessionId" class="btn-table-edit" title="Редактировать">
+                            <i class="fa-solid fa-pen-to-square"></i>
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.SessionId" class="btn-table-delete" title="Удалить">
+                            <i class="fa-solid fa-trash"></i>
+                        </a>
+                    </div>
                 </td>
             </tr>
         }
