--- a/ikm/Views/Home/Index.cshtml
+++ b/ikm/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <a asp-controller="AppSessions" asp-action="Index" class="btn btn-sm btn-outline-secondary w-100">Открыть журнал</a>
+                    <a asp-controller="AppSessions" asp-action="Index" class="btn btn-sm btn-outline-secondary w-100">Перейти</a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <a asp-controller="PageSessions" asp-action="Index" class="btn btn-sm btn-outline-success w-100">Открыть журнал</a>
+                    <a asp-controller="PageSessions" asp-action="Index" class="btn btn-sm btn-outline-success w-100">Перейти</a>
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <a asp-controller="ViewSessions" asp-action="Index" class="btn btn-sm btn-outline-warning w-100">Открыть журнал</a>
+                    <a asp-controller="ViewSessions" asp-action="Index" class="btn btn-sm btn-outline-warning w-100">Перейти</a>
                 </div>
             </div>
         </div>
