--- a/ikm/Views/PageSessions/Create.cshtml
+++ b/ikm/Views/PageSessions/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Создание";
 }
 
-<h1>Добавить сессию</h1>
+<h1>Добавить запись</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -58,7 +58,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Создать" class="btn btn-success" />
+                <input type="submit" value="Создать" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-secondary">Назад</a>
             </div>
         </form>
