--- a/ikm/Views/Shared/_Layout.cshtml
+++ b/ikm/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - IKM Tracker</title>
+    <title>@ViewData["Title"] - Tracker</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -20,7 +20,7 @@
 
                     <a asp-controller="Home" asp-action="Index" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none px-3">
                         <i class="fa-solid fa-chart-pie fa-2x me-2 text-primary"></i>
-                        <span class="fs-4 fw-bold">IKM Tracker</span>
+                        <span class="fs-4 fw-bold">Tracker</span>
                     </a>
                     <hr>
 
