--- a/ikm/Views/Sites/Index.cshtml
+++ b/ikm/Views/Sites/Index.cshtml
@@ -25,12 +25,14 @@
             <tr>
                 <td>@Html.DisplayFor(modelItem => item.Domain)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Domain" class="btn btn-primary btn-sm" title="Редактировать">
-                        <i class="fa-solid fa-pen-to-square"></i>
-                    </a>
-                    <a asp-action="Delete" asp-route-id="@item.Domain" class="btn btn-danger btn-sm" title="Удалить">
-                        <i class="fa-solid fa-trash"></i>
-                    </a>
+                    <div class="d-flex gap-2">
+                        <a asp-action="Edit" asp-route-id="@item.Domain" class="btn-table-edit" title="Редактировать">
+                            <i class="fa-solid fa-pen-to-square"></i>
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.Domain" class="btn-table-delete" title="Удалить">
+                            <i class="fa-solid fa-trash"></i>
+                        </a>
+                    </div>
                 </td>
             </tr>
         }
