--- a/ikm/Views/Videos/Create.cshtml
+++ b/ikm/Views/Videos/Create.cshtml
@@ -36,7 +36,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Создать" class="btn btn-success" />
+                <input type="submit" value="Создать" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-secondary">Назад</a>
             </div>
         </form>
