--- a/ikm/Views/ViewSessions/Delete.cshtml
+++ b/ikm/Views/ViewSessions/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Удаление</h1>
-<h3>Вы уверены, что хотите удалить эту сессию?</h3>
+<h3>Вы уверены, что хотите удалить эту запись?</h3>
 <div>
     <hr />
     <dl class="row">
